--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@react-jvectormap/core": "^1.0.4",
     "@react-jvectormap/world": "^1.1.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "apexcharts": "^4.1.0",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
+    "lucide-react": "^0.484.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
     "react-dnd": "^16.0.1",
@@ -28,7 +31,10 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.5.2",
+    "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
+    "react-router-dom": "^7.4.0",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1"
   },
